--- a/public/css/style.css
+++ b/public/css/style.css
@@ -82,12 +82,21 @@ header .dropdown-menu {
     color: #99abb4; 
 }
 
+.form-label {
+    color: #9a9a9a;
+}
+.form-control::placeholder {
+    color: #ccc;
+}
+
 .m-t-0 { margin-top: 0 !important }    
 .m-t-5 { margin-top: 5px !important }
 .m-t-20 { margin-top: 20px !important }
 .m-t-30 { margin-top: 30px !important }
 .m-t-50 { margin-top: 50px !important }
 .m-b-20 { margin-bottom: 20px }
+.m-b-30 { margin-bottom: 30px }
+.m-b-0 { margin-bottom: 0;}
 .no-padding { padding: 0 !important }
 .p-10 { padding: 10px !important}
 
@@ -224,4 +233,9 @@ table.dataTable tbody tr:hover .table-btn > div {
     font-size: .3875rem;
     line-height: 1;
     border-radius: .2rem;
+}
+
+.text-small {
+    font-size: 13px;
+    color: #ccc;
 }
