--- a/public/css/style.css
+++ b/public/css/style.css
@@ -175,6 +175,7 @@ header .dropdown-menu {
 .m-r-20 { margin-right: 20px}
 .no-padding { padding: 0 !important }
 .p-10 { padding: 10px !important}
+.p-20 { padding: 20px }
 
 .card {
     background: #ffffff none repeat scroll 0 0; 
