--- a/public/css/style.css
+++ b/public/css/style.css
@@ -161,6 +161,7 @@ header .dropdown-menu {
     color: #ccc;
 }
 .m-10 { margin: 10px; }
+.m-50 { margin: 50px; }
 .m-t-0 { margin-top: 0 !important }    
 .m-t-5 { margin-top: 5px !important }
 .m-t-20 { margin-top: 20px !important }
@@ -176,6 +177,7 @@ header .dropdown-menu {
 .no-padding { padding: 0 !important }
 .p-10 { padding: 10px !important}
 .p-20 { padding: 20px }
+.p-30 { padding: 30px }
 
 .card {
     background: #ffffff none repeat scroll 0 0; 
