--- a/public/css/invoice-style.css
+++ b/public/css/invoice-style.css
@@ -17,7 +17,8 @@
 
 .table-create-IV .td__unitValue{
 
-    max-width: 130px;
+    max-width: 180px;
+    padding-bottom: 0;
 }
 
 .btn-remove-row {
