--- a/public/css/style.css
+++ b/public/css/style.css
@@ -69,6 +69,9 @@ textarea { resize: none }
 }
 
 /* Dropdown */
+.dropdown-menu {
+    z-index: 1050!important;
+}
 .dropdown-menu__wrap {
     width: 250px;
     padding: 0;
