--- a/public/css/style.css
+++ b/public/css/style.css
@@ -382,8 +382,8 @@ input[type=number]::-webkit-outer-spin-button {
 
 #processingIndicator{
     position: absolute;
+    top: 60px;
     z-index: 100;
     width: 100%;
-    height: 100%;
     background-color: rgba(255, 255, 255, 0.84);
 }
